Resizable array class
This patch adds a new helper class for holding a resizable array of
fixed-length data.  We'll use this in the implementation of the
schema-specific class for Avro array types.  We can also use it to
replace the numerically-indexed hash tables that are used in several of
the avro_schema_t and avro_datum_t subclasses.

--- a/lang/c/src/CMakeLists.txt
+++ b/lang/c/src/CMakeLists.txt
@@ -20,8 +20,10 @@
 set(AVRO_SRC
     allocation.h
     allocation.c
+    array.c
     avro.h
     avro/consumer.h
+    avro/data.h
     avro/refcount.h
     avro_errors.h
     avro_private.h
