--- a/lang/c/src/CMakeLists.txt
+++ b/lang/c/src/CMakeLists.txt
@@ -18,10 +18,10 @@
 #
 
 set(AVRO_SRC
-    allocation.h
     allocation.c
     array.c
     avro.h
+    avro/allocation.h
     avro/consumer.h
     avro/data.h
     avro/refcount.h
