Error message API is now public
This patch exposes the avro_set_error and avro_prefix_error functions in
the public headers files.  We need this to be able to provide useful
error messages in the schema-specific functions generated by avrocc.

--- a/lang/c/src/CMakeLists.txt
+++ b/lang/c/src/CMakeLists.txt
@@ -24,6 +24,7 @@ set(AVRO_SRC
     avro/allocation.h
     avro/consumer.h
     avro/data.h
+    avro/errors.h
     avro/refcount.h
     avro/specific.c.in
     avro/specific.h.in
@@ -31,7 +32,6 @@ set(AVRO_SRC
     avro/specific/init.c.in
     avro/specific/lifecycle.h.in
     avro/specific/typedef.h.in
-    avro_errors.h
     avro_private.h
     consumer.c
     datafile.c
