Raw value comparison operations
This patch adds functions for comparing “raw” primitive Avro values.
Most of these are just simple wrappers around the == operator, but we
want a consistent naming convention for the comparison functions for
all of our schema-specific types — even the primitive ones.

--- a/lang/c/src/CMakeLists.txt
+++ b/lang/c/src/CMakeLists.txt
@@ -26,6 +26,7 @@ set(AVRO_SRC
     avro/data.h
     avro/errors.h
     avro/refcount.h
+    avro/specific.h
     avro/specific.c.in
     avro/specific.h.in
     avro/specific/done.c.in
@@ -52,6 +53,7 @@ set(AVRO_SRC
     io.c
     map.c
     memoize.c
+    raw_compare.c
     resolver.c
     schema.c
     schema.h
