--- a/lang/c/src/CMakeLists.txt
+++ b/lang/c/src/CMakeLists.txt
@@ -29,8 +29,14 @@ set(AVRO_SRC
     avro/specific.h
     avro/specific.c.in
     avro/specific.h.in
+    avro/specific/array.c.in
+    avro/specific/comparison.c.in
     avro/specific/done.c.in
     avro/specific/init.c.in
+    avro/specific/map.c.in
+    avro/specific/union_set.c.in
+    avro/specific/accessors.h.in
+    avro/specific/comparison.h.in
     avro/specific/lifecycle.h.in
     avro/specific/typedef.h.in
     avro_private.h
