Schema-specific resolvers for non-union types
This patch adds resolver implementations for all of our schema-specific
types, except for unions.  (We don't support reader unions _or_ writer
unions at this point.)  The resolver implementations are all based on
the avro_datum_t resolver implementation in src/resolver.c.

--- a/lang/c/src/CMakeLists.txt
+++ b/lang/c/src/CMakeLists.txt
@@ -34,10 +34,12 @@ set(AVRO_SRC
     avro/specific/done.c.in
     avro/specific/init.c.in
     avro/specific/map.c.in
+    avro/specific/resolver.c.in
     avro/specific/union_set.c.in
     avro/specific/accessors.h.in
     avro/specific/comparison.h.in
     avro/specific/lifecycle.h.in
+    avro/specific/resolver.h.in
     avro/specific/typedef.h.in
     avro_private.h
     consumer.c
