avrocc works on multiple input schema files
The avrocc compiler now accepts multiple .avsc schema files.  It still
produces a single set of output files, which will contain all of the
schemas and subschemas defined in the .avsc files that are passed in.
We make sure to only output any given type once, even if it appears in
multiple .avsc files.

--- a/lang/c/tests/CMakeLists.txt
+++ b/lang/c/tests/CMakeLists.txt
@@ -54,11 +54,13 @@ add_custom_command(
       ${CMAKE_CURRENT_BINARY_DIR}/specific_list.c
     COMMAND
       ${CMAKE_CURRENT_BINARY_DIR}/../src/avrocc
-        -f specific_
+        -f specific_list
         -O ${CMAKE_CURRENT_BINARY_DIR}
         -t specific
+        ${CMAKE_CURRENT_SOURCE_DIR}/point.avsc
         ${CMAKE_CURRENT_SOURCE_DIR}/list.avsc
     DEPENDS
+      ${CMAKE_CURRENT_SOURCE_DIR}/point.avsc
       ${CMAKE_CURRENT_SOURCE_DIR}/list.avsc
       ${CMAKE_CURRENT_SOURCE_DIR}/../src/avrocc.c
       ${CMAKE_CURRENT_SOURCE_DIR}/../src/schema_specific.c
