--- a/lang/c/tests/CMakeLists.txt
+++ b/lang/c/tests/CMakeLists.txt
@@ -55,5 +55,6 @@ add_avro_test(test_avro_1084)
 add_avro_test(test_avro_1087)
 add_avro_test(test_avro_1165)
 add_avro_test(test_avro_data)
+add_avro_test(test_empty_file)
 add_avro_test(test_refcount)
 add_avro_test(test_cpp test_cpp.cpp)
