--- a/lang/c/tests/CMakeLists.txt
+++ b/lang/c/tests/CMakeLists.txt
@@ -52,5 +52,6 @@ add_avro_test(test_avro_968)
 add_avro_test(test_avro_984)
 add_avro_test(test_avro_1034)
 add_avro_test(test_avro_data)
+add_avro_test(test_empty_file)
 add_avro_test(test_refcount)
 add_avro_test(test_cpp test_cpp.cpp)
