Fix pkg-config dependency with zlib and Mac OS X
Mac OS X does not include a zlib.pc file, which causes errors in including
the avro-c package for projects.  This patch removes zlib from `CODEC_PKG`
on Mac OS X, althought libavro still links with zlib for deflate support.

--- a/lang/c/CMakeLists.txt
+++ b/lang/c/CMakeLists.txt
@@ -150,8 +150,11 @@ else (LZMA_FOUND)
 endif (LZMA_FOUND)
 
 set(CODEC_LIBRARIES ${ZLIB_LIBRARIES} ${LZMA_LIBRARIES})
-set(CODEC_PKG "@ZLIB_PKG@ @LZMA_PKG@")
-
+if (APPLE)
+    set(CODEC_PKG "@LZMA_PKG@")
+else (APPLE)
+    set(CODEC_PKG "@ZLIB_PKG@ @LZMA_PKG@")
+endif (APPLE)
 
 add_subdirectory(src)
 add_subdirectory(examples)
