--- a/lang/c/CMakeLists.txt
+++ b/lang/c/CMakeLists.txt
@@ -127,7 +127,7 @@ include_directories(${AvroC_SOURCE_DIR}/jansson/src)
 # Enable codecs
 find_package(ZLIB)
 if (ZLIB_FOUND)
-    set(ZLIB_PKG zlib)
+    set(ZLIB_PKG "")
     add_definitions(-DDEFLATE_CODEC)
     include_directories(${ZLIB_INCLUDE_DIR})
     message("Enabled deflate codec")
