Support for Tilera platform
This patch supports the Tilera multicore platform.  Build scripts will
build for Tilera in transparent way.  Also, this patch assumes the
`tile-gcc` compiler is version 4.1.0 or higher, which is different from
the standard Avro assumption of GCC >= 4.5.0.  This is necessary to
support atomic intrinsics on Tilera.

--- a/lang/c/tests/CMakeLists.txt
+++ b/lang/c/tests/CMakeLists.txt
@@ -58,3 +58,7 @@ add_avro_test(test_avro_data)
 add_avro_test(test_empty_file)
 add_avro_test(test_refcount)
 add_avro_test(test_cpp test_cpp.cpp)
+
+if(TILERA)
+    configure_file(tile-test ${CMAKE_BINARY_DIR}/tile-test COPYONLY)
+endif(TILERA)
