--- a/lang/c/tests/CMakeLists.txt
+++ b/lang/c/tests/CMakeLists.txt
@@ -59,6 +59,7 @@ add_avro_test(test_avro_1238)
 add_avro_test(test_avro_1279)
 add_avro_test(test_avro_1405)
 add_avro_test(test_avro_data)
+add_avro_test(test_empty_file)
 add_avro_test(test_refcount)
 add_avro_test(test_cpp test_cpp.cpp)
 add_avro_test(test_avro_1379)
